# LatentPagedAttention-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml  uv.toml
crates/plkv-kernels/: Cargo.toml
crates/plkv-kernels/examples/: cutile_smoke.rs  direct_latent_gqa_gpu.rs  direct_paged_latent_gqa_gpu.rs  fp16_full_kv_baseline_gpu.rs  gqa_decode_gpu.rs  latent_kv_reconstruction_gpu.rs  model_profile_gpu.rs  paged_gqa_decode_gpu.rs  paged_kv_write_gpu.rs  paged_latent_write_attention_fp16_gpu.rs  paged_latent_write_attention_gpu.rs  paged_lookup_gpu.rs  runtime_sequence_gpu.rs
crates/plkv-kernels/src/: lib.rs
crates/plkv-kernels/src/cutile/: direct_latent_gqa.rs  direct_paged_latent_gqa.rs  direct_paged_latent_gqa_fp16.rs  full_kv_baseline.rs  gqa_decode.rs  latent_kv_reconstruction.rs  mod.rs  model_profile.rs  paged_gqa_decode.rs  paged_kv_write.rs  paged_latent_write.rs  paged_latent_write_fp16.rs  paged_lookup.rs  runtime_sequence.rs
docs/: 00_research_question.md  01_literature_review.md  02_memory_model.md  03_attention_variants.md  04_benchmark_methodology.md  05_no_fake_claims_policy.md  06_reference_benchmark_report.md  08_rtx4060_gpu_baseline.md  09_cutile_smoke_and_gpu_paged_lookup.md  10_gpu_paged_kv_write.md  11_gpu_contiguous_gqa_decode.md  12_gpu_paged_gqa_decode.md  13_gpu_latent_kv_reconstruction.md  14_gpu_direct_latent_gqa.md  15_gpu_direct_paged_latent_gqa.md  16_gpu_paged_latent_write_attention.md  17_gpu_fp16_paged_latent_storage.md  ARCHITECTURE.md  CAREER_POSITIONING.md  DEVELOPMENT_HISTORY.md  FINAL_REPORT.md  LAUNCH_CHECKLIST.md  LAUNCH_COPY.md  LIMITATIONS.md  OUTREACH_MESSAGES.md  OUTREACH_TARGETS.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  TECHNICAL_ARTICLE.md
scripts/: cutile_env.sh  env_check.sh  generate_golden_fixtures.sh  rtx4060_env_snapshot.sh  rtx4060_memory_sanity.sh  run_cutile_smoke.sh  run_final_benchmark.sh  run_gpu_direct_latent_gqa.sh  run_gpu_direct_paged_latent_gqa.sh  run_gpu_fp16_full_kv_baseline.sh  run_tests.sh  (+12 more)
(+42 files in other folders)
